# first-rust-app

./: Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: appwindow.slint
