[package]
name = "first-app"
version = "0.1.0"
authors = ["pranayjoshi <pranayjoshi4466@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Desktop app that divides income."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]

name = "Income divider"
identifier = "io.github.pranayjoshi.first-rust-app"